--- a/1-ismetles/szilva/szilva.html
+++ b/1-ismetles/szilva/szilva.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>A szilva</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/szilva.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/header-footer.css">
 </head>
 
 <body>
     <header>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <p><img src="images/szilva_fejlec.png" alt="szilva" class="img-fluid"></p>
+                </div>
+                <div class="col-9">
+                    <p>Édes íz, gazdag múlt!</p>
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -35,6 +49,17 @@
     </main>
 
     <footer>
+        <div id="kapcsolat">
+            <h2>Kapcsolat</h2>
+            <span>Email: szilva@info.hu</span>
+            <span>Telefon: +36 101 1100</span>
+            <span>Cím: Bp., Szilva utca 404.</span>
+        </div>
+
+        <div id="kozosseg">
+
+        </div>
+
         https://www.facebook.com/profile.php?id=100089257707950
 
         https://twitter.com/mynzagric254/status/1680512708108484608
