ismetles - szilva, grid system, python fájl beolvasás

--- a/1-ismetles/szilva/szilva.html
+++ b/1-ismetles/szilva/szilva.html
@@ -97,6 +97,59 @@
 
         <section id="galeria">
             <h2>Galéria</h2>
+            <div class="container-fluid">
+                <!-- max 6 oszlop egymás mellet XL méret esetén -->
+                <div class="row row-cols-xl-6 row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/gallery/black-amber.jpg" alt="black-amber" class="img-thumbnail" title="Black amber">
+                        <p class="rounded">Black amber</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
