szilva - html kész

--- a/1-ismetles/szilva/szilva.html
+++ b/1-ismetles/szilva/szilva.html
@@ -30,69 +30,71 @@
     <main>
         <h1>Szilva - gyümölcs</h1>
 
-        <section id="miert">
+        <section id="miert" class="container-fluid">
             <h2>Miért egyél szilvát?</h2>
 
-            <article>
-                <h3>Jellemzői</h3>
-                <p>Magját három rétegű termésfal burkolja. Kívül vékony hamvas héj, középen édes, ízes gyümölcshús,belül pedig kőkemény csonthéj. Az ilyen szerkezetű termést csonthéjas termésnek nevezzük.</p>
-                <p>A szilva magas cukor- és vitamintartalma miatt az egyik legértékesebb gyümölcsünk. Minden évszakban kedvelt, hisz nemcsak frissen, de tartósítva befőttként, lekvárként és aszalt szilvaként is fogyasztjuk. Hasonlóképpen használjuk fel rokonai közül a meggyet, a cseresznyét, az őszi- és a kajszibarackot.</p>
-            </article>
-            <article>
-                <h3>Jótékony hatásai</h3>
-                <ul>
-                    <li>Vitaminbomba</li>
-                    <li>Vérszegénység ellen hatásos</li>
-                    <li>Elősegíti az emésztést</li>
-                    <li>Védi a szív- és érrendszert</li>
-                    <li>Szomjoltó</li>
-                    <li>Étvágyfokozó</li>
-                </ul>
-            </article>
-            <article>
-                <h3>Ételek</h3>
-                <ol>
-                    <li>Szilvás kevert sütemény</li>
-                    <li>Tejfölös-szilvás lepény</li>
-                    <li>Szilvás tarte tatin</li>
-                    <li>Szilvás tejpite</li>
-                    <li>Házi szilvalekvár</li>
-                    <li>Lekváros bukta</li>
-                    <li>Fahéjas-szilvás gombóc</li>
-                    <li>Szilvás bólyi túrós</li>
-                    <li>Szilvás-marcipános sütemény</li>
-                    <li>Fehérboros szilvakrémleves</li>
-                </ol>
-            </article>
-            <article>
-                <h3>Tápérték</h3>
-                <table>
-                    <tr>
-                        <td>Kalória</td>
-                        <td>30</td>
-                    </tr>
-                    <tr>
-                        <td>Zsír</td>
-                        <td>0,2 g</td>
-                    </tr>
-                    <tr>
-                        <td>Nátrium</td>
-                        <td>0 mg</td>
-                    </tr>
-                    <tr>
-                        <td>Szénhidrát</td>
-                        <td>7,5 g</td>
-                    </tr>
-                    <tr>
-                        <td>Cukor</td>
-                        <td>6,6 g</td>
-                    </tr>
-                    <tr>
-                        <td>Fehérje</td>
-                        <td>0,5 g</td>
-                    </tr>
-                </table>
-            </article>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
+                <article class="col">
+                    <h3>Jellemzői</h3>
+                    <p>Magját három rétegű termésfal burkolja. Kívül vékony hamvas héj, középen édes, ízes gyümölcshús,belül pedig kőkemény csonthéj. Az ilyen szerkezetű termést csonthéjas termésnek nevezzük.</p>
+                    <p>A szilva magas cukor- és vitamintartalma miatt az egyik legértékesebb gyümölcsünk. Minden évszakban kedvelt, hisz nemcsak frissen, de tartósítva befőttként, lekvárként és aszalt szilvaként is fogyasztjuk. Hasonlóképpen használjuk fel rokonai közül a meggyet, a cseresznyét, az őszi- és a kajszibarackot.</p>
+                </article>
+                <article class="col">
+                    <h3>Jótékony hatásai</h3>
+                    <ul>
+                        <li>Vitaminbomba</li>
+                        <li>Vérszegénység ellen hatásos</li>
+                        <li>Elősegíti az emésztést</li>
+                        <li>Védi a szív- és érrendszert</li>
+                        <li>Szomjoltó</li>
+                        <li>Étvágyfokozó</li>
+                    </ul>
+                </article>
+                <article class="col">
+                    <h3>Ételek</h3>
+                    <ol>
+                        <li>Szilvás kevert sütemény</li>
+                        <li>Tejfölös-szilvás lepény</li>
+                        <li>Szilvás tarte tatin</li>
+                        <li>Szilvás tejpite</li>
+                        <li>Házi szilvalekvár</li>
+                        <li>Lekváros bukta</li>
+                        <li>Fahéjas-szilvás gombóc</li>
+                        <li>Szilvás bólyi túrós</li>
+                        <li>Szilvás-marcipános sütemény</li>
+                        <li>Fehérboros szilvakrémleves</li>
+                    </ol>
+                </article>
+                <article class="col">
+                    <h3>Tápérték</h3>
+                    <table>
+                        <tr>
+                            <td>Kalória</td>
+                            <td>30</td>
+                        </tr>
+                        <tr>
+                            <td>Zsír</td>
+                            <td>0,2 g</td>
+                        </tr>
+                        <tr>
+                            <td>Nátrium</td>
+                            <td>0 mg</td>
+                        </tr>
+                        <tr>
+                            <td>Szénhidrát</td>
+                            <td>7,5 g</td>
+                        </tr>
+                        <tr>
+                            <td>Cukor</td>
+                            <td>6,6 g</td>
+                        </tr>
+                        <tr>
+                            <td>Fehérje</td>
+                            <td>0,5 g</td>
+                        </tr>
+                    </table>
+                </article>
+            </div>
         </section>
 
         <section id="galeria">
