szilva - main háttér formázása

--- a/1-ismetles/szilva/szilva.html
+++ b/1-ismetles/szilva/szilva.html
@@ -31,6 +31,8 @@
         <h1>Szilva - gyümölcs</h1>
 
         <section id="miert" class="container-fluid">
+            <!-- Ez így csúnya! HTML elem kellett egy CSS tulajdonság megadásához! -->
+            <div id="hatter"></div>
             <h2>Miért egyél szilvát?</h2>
 
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
