--- a/1-ismetles/szilva/szilva.html
+++ b/1-ismetles/szilva/szilva.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>A szilva</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="styles/szilva.css">
-    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/header-footer.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -102,6 +102,17 @@
                                 <td>0,5 g</td>
                             </tr>
                         </table>
+                        <!-- <div id="bekezdes">
+                            <div>
+                                1. szint
+                                <div>
+                                    2. szint
+                                    <div id="belso">
+                                        3. szint
+                                    </div>
+                                </div>
+                            </div>
+                        </div> -->
                     </article>
                 </div>
             </div>
