--- a/2-html/1-media/index.html
+++ b/2-html/1-media/index.html
@@ -16,5 +16,18 @@
         <source src="audio/poterettsegi.aac" type="audio/aac">
         <source src="audio/poterettsegi.mp3" type="audio/mpeg">
     </audio>
+
+    <!-- <video src="video/kiseger.mp4" controls></video> -->
+    <!-- controlsList = "nodownload" -->
+    <video controls autoplay muted loop>
+        <source src="video/kiseger.mp4" type="video/mp4">
+    </video>
+
+    <h2>Suli oldala - <a href="https://faviccek.hu/" target="ckik">Faviccek</a> </h2>
+    <iframe src="https://ckik.hu" name="ckik"></iframe>
+
+    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/CLzMPM1anl4?si=0-KSXtveMCJ5KTIl" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+
+    <iframe src="belso.html"></iframe>
 </body>
 </html>
