HTML form - label, p validálás

--- a/2-html/2-form/verseny.html
+++ b/2-html/2-form/verseny.html
@@ -35,8 +35,8 @@
                 Mennyire szereted az óriási kisegeret?
                 <input type="range" min="0" max="10" name="kiseger" value="8">
             </label>
-            <label>
-                <p>Póló méret:</p>
+            <div>
+                <label>Póló méret:</label>
                 <select name="polo" multiple>
                     <option>S</option>
                     <option selected>M</option>
@@ -44,7 +44,7 @@
                     <option>XL</option>
                     <option disabled>XXL</option>
                 </select>
-            </label>
+            </div>
             <label>
                 Kategória:
                 <select name="kategoria">
@@ -63,10 +63,8 @@
                     </optgroup>
                 </select>
             </label>
-            <label>
-                <p>Megjegyzés:</p>
-                <textarea rows="5" cols="50" placeholder="Pl.: laktóz érzékeny vagyok"></textarea>
-            </label>
+            <label>Megjegyzés:</label>
+            <textarea rows="5" cols="50" placeholder="Pl.: laktóz érzékeny vagyok"></textarea>
             <label>
                 <span>Azonosító:</span>
                 <input type="text" value="GKA3J2" readonly size="6">
