--- a/2-html/4-mikulas/FNL_mo/index.html
+++ b/2-html/4-mikulas/FNL_mo/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mikulás - Kezdőlap</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.jpg">
 </head>
 <body>
     <header>
-        <audio controls autoplay muted loop src="media/all-i-want-for-christmas.mp3"></audio>
+        <audio autoplay loop muted controls src="media/all-i-want-for-christmas.mp3"></audio>
     </header>
     <nav>
         <ul>
@@ -25,10 +26,11 @@
     <img src="images/telapo_piroska.jpg" alt="Télapó és Piroska">
 
     <h2>Próbáld ki népszerű mikulásos játékunkat!</h2>
-    <iframe allowfullscreen src="https://wordwall.net/hu/embed/74811f249a80486da51636efda845cca"></iframe>
+    <iframe src="https://wordwall.net/hu/embed/74811f249a80486da51636efda845cca" allowfullscreen></iframe>
 
     <h2>Mennyi van még hátra?</h2>
-    <p>Ide kattintva megtudhatod, hogy <a target="countdown" href="https://yourchristmascountdown.com/">mennyi idő van még karácsonyig!</a></p>
-    <iframe name="countdown"></iframe>
+    <p>Ide kattintva megtudhatod, hogy <a href="https://yourchristmascountdown.com/" target="napok">mennyi idő van még karácsonyig!</a></p>
+    <iframe name="napok"></iframe>
+
 </body>
 </html>
