--- a/2-html/4-mikulas/FNL_mo/rajzok.html
+++ b/2-html/4-mikulas/FNL_mo/rajzok.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mikulás - Rajzok</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.jpg">
 </head>
 <body>
     <header>
@@ -23,6 +24,7 @@
     
     <p>A rajzok ideiglenesen nem érhetők el... De itt van helyette egy Rudolf!</p>
 
+    <iframe src="https://www.youtube.com/embed/BeCDjnhCc1g" allowfullscreen></iframe>
 
     <article>
         <h2>Napi humor!</h2>
