::after line transform, transition

--- a/3-css/6-epiteszek/index.html
+++ b/3-css/6-epiteszek/index.html
@@ -11,10 +11,10 @@
         <p>Építészet</p>
         <nav>
             <ul>
-                <li><a href="#">Kezdőlap</a></li>
-                <li><a href="#">Rólunk</a></li>
-                <li><a href="#">Szolgáltatások</a></li>
-                <li><a href="#">Kapcsolat</a></li>
+                <li><a href="#"><span>Kezdőlap</span></a></li>
+                <li><a href="#"><span>Rólunk</span></a></li>
+                <li><a href="#"><span>Szolgáltatások</span></a></li>
+                <li><a href="#"><span>Kapcsolat</span></a></li>
             </ul>
         </nav>
     </header>
